[package]
name = "uni-snd"
version = "0.2.2"
authors = ["jice <jice.nospam@gmail.com>"]
description = "Unrust low level native/wasm compatibility layer for sound output"
license = "MIT"
documentation = "https://docs.rs/uni-snd"
repository = "https://github.com/unrust/uni-snd"
keywords = ["sound", "wasm"]
edition = "2021"
exclude = ["www"]

[dependencies]
uni-app = "0.2.*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.14" }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
cpal = { version = "0.14", features = ["wasm-bindgen"] }
